<resources>
    <string name="app_name">FOOD2GO</string>
    <string name="trenutna_narudzba">Trenutna narudzba</string>
    <string name="moje_narudzbe">Moje narudžbe</string>
    <string name="nagrade">Nagrade</string>
    <string name="stanje_bodova">Stanje bodova</string>
    <string name="bodovi_vjernosti">Bodovi vjernosti</string>
    <string name="postavke">Postavke</string>
    <string name="odjava">Odjava</string>
    <string name="kategorije">Kategorija</string>
    <string name="title_activity_glavni">GlavniActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FOOD2GO</string>
    <string name="menu_gallery">FOOD2GO</string>
    <string name="menu_slideshow">FOOD2GO</string>
    <string name="menu_tools">FOOD2GO</string>
    <string name="menu_share">FOOD2GO</string>
    <string name="menu_send">FOOD2GO</string>
    <string name="menu_kategorije">FOOD2GO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
